tests/miniJava/neg/005146_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] length java ) { return 0 ; } }
